<?xml version="1.0"?>
<package format="2">
  <name>line_tracer</name>
  <version>1.0.0</version>
  <description>TurtleBot3 line tracing using two white lines on black background (laptop-side processing)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
